--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="author" content="Provashish Roy">
 
     <!-- Internal CSS -->
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./style/styles.css">
 
     <title>Digital Marketer</title>
 </head>
