--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- meta tags for SEO -->
     <meta name="title" content="Provashish Roy - Digital Marketer">
-    <meta name="description" content="Passionate Digital Marketer with a strong foundation in SEO and Front-End Development, dedicated to helping businesses enhance their online presence and achieve measurable success.">
-    <meta name="keywords" content="provashish, provashish roy, digital marketing, digital marketer, best digital marketer in bangladesh, seo expert, seo optimization">
+    <meta name="description"
+        content="Passionate Digital Marketer with a strong foundation in SEO and Front-End Development, dedicated to helping businesses enhance their online presence and achieve measurable success.">
+    <meta name="keywords"
+        content="provashish, provashish roy, digital marketing, digital marketer, best digital marketer in bangladesh, seo expert, seo optimization">
     <meta name="robots" content="index, follow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="English">
@@ -18,8 +21,60 @@
     <link rel="stylesheet" href="./style/styles.css">
 
     <title>Digital Marketer</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
 </head>
+
 <body>
-    <h1>Provashish roy</h1>
+    <!-- navbar -->
+    <navbar class="navbar">
+        <div class="nav-container">
+            <div class="nav-left">
+                <div class="">
+                    <a href="/">
+                        <img src="./images/provashish.jpg" width="60" class="logo" alt="image of provashish roy">
+                    </a>
+                </div>
+                <div class="">
+                    <h1 class="nav-name">Provashish Roy</h1>
+                </div>
+            </div>
+            <div class="nav-right">
+                <ul class="nav-items-container">
+                    <li class="nav-items"><a href="#about" class="nav-items-link">About</a></li>
+                    <li class="nav-items"><a href="#resume" class="nav-items-link">Resume</a></li>
+                    <li class="nav-items"><a href="#certifications" class="nav-items-link">Certifications</a></li>
+                    <li class="nav-items"><a href="#skills" class="nav-items-link">Skills</a></li>
+                    <li class="nav-items"><a href="#portfolio" class="nav-items-link">Portfolio</a></li>
+                    <li class="nav-items"><a href="#contact" class="nav-items-link">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </navbar>
+    <!-- navbar -->
+
+    <!-- hero section.. -->
+    <div id="#about" class="container">
+        <div class="hero-container">
+            <div class="hero-left">
+                <img src="./images/provashish.jpg" alt="Picture of Eftykhar Rahman" class="hero-image" width="300">
+            </div>
+            <div class="hero-right">
+                <h2 class="title">Provashish Roy</h2>
+                <p class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam, consequuntur
+                    facere sapiente nisi deleniti error asperiores nemo, accusantium sunt, incidunt architecto ipsa
+                    similique neque. Tempore ipsam quia illum similique earum
+                    nemo consectetur officiis nesciunt asperiores mollitia. Velit consequuntur fugiat pariatur quis
+                    nobis laudantium exercitationem sapiente, modi, quo est quas recusandae rerum consectetur, neque
+                    mollitia inventore expedita error non
+                    nihil soluta.</p>
+            </div>
+        </div>
+    </div>
+    <!-- hero section.. -->
 </body>
+
 </html>
