--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 
 </head>
 
@@ -75,6 +76,36 @@
         </div>
     </div>
     <!-- hero section.. -->
+    <!-- resume section... -->
+    <div class="containe" id="resume">
+        <div class="resume-container">
+            <div class="title">Resume</div>
+            <div class="resume-sub-container">
+                <div class="resume-left">
+                    <img src="./images/project.png" class="resume-image" width="400" alt="project">
+                </div>
+                <div class="resume-right">
+                    <h3 class="sub-title">Experience</h3>
+                    <div class="line">
+                        <div class="inner-line"></div>
+                    </div>
+                    <div class="resume-list">
+                        <div class="resume-duration-container">
+                            <div class="round-div"></div>
+                            <div class="resume-duration">2024-present</div>
+                        </div>
+
+                        <div class="resume-description">
+                            <div class="resume-company">FBSC</div>
+                            <div class="resume-designation">SEO Expert</div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- resume section... -->
 </body>
 
 </html>
